# royalty-driven-llm

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
artifacts/: README.md  answer_claim_coverage_report.json  answer_provenance_card.json  assurance_bundle.json  assurance_bundle_post_release.json  attribution_bom.json  attribution_bom_input.json  attribution_capsule.json  attribution_challenge_report.json  attribution_dispute_adjudication_input.json  attribution_exchange.json  attribution_gap_report.json  audit_attestation.json  black_box_model_provenance_input.json  black_box_model_provenance_report.json  calibrated_attribution_report.json  certification_attestation.json  citation_footer_contract.json  citation_identity_input.json  citation_reliance_input.json  citation_url_health.json  citation_url_health_input.json  claim_source_attribution_input.json  claim_source_attribution_report.json  clearinghouse_report.json  client_attribution_enforcement.json  code_attribution_report.json  composite_foundation_adapter_input.json  conformance_ledger.json  conformance_ledger_v2.json  conformance_proof.json  conformance_public_receipt.json  conformance_receipt.json  conformance_selective_disclosure_package.json  conformance_transparency_log.json  conformance_vector_pack.json  consent_revocation_propagation.json  consent_revocation_propagation_input.json  content_protocol_ingestion_input.json  content_protocol_ingestion_report.json  (+247 more)
docs/: adopter_quickstart.md  attribution_receipt_protocol.md  deployment.md  evidence.md  first_5_minutes.md  github_start_here.md  hosting.md  index.html  industry_adoption_blueprint.md  mechanism.md  operator_runbook.md  production_readiness.md  project_attribution.md  provider_compatibility_matrix.md  provider_onboarding.md  public_explainer.md  recent_research.md  references.md  release_checklist.md  service_api.md
examples/: citation_identity_inputs.json  claim_verification_corpus.json  claim_verification_inputs.json  code_attribution_inputs.json  code_corpus.json  conflict_corpus.json  counterfactual_corpus.json  finance_records.json  lineage_corpus.json  media_corpus.json  media_inputs.json  model_signal_inputs.json  pinpoint_provenance_inputs.json  provenance_benchmark.json  provenance_benchmark_corpus.json  registry_resolution.json  restricted_corpus.json  revenue_sources.json  revocation_previous_corpus.json  revocation_updated_corpus.json  sample_corpus.json  semantic_text_inputs.json  service_config.openai_compatible.json  source_authenticity_signals.json  source_availability_snapshots.json
paper/: rdllm_white_paper.md  references.bib  (+1 more)
tools/: e2e_smoke.py  (+36 more)
(+567 files in other folders)
